# vegetation_analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
demo/: README.md
docs/: CHANGELOG.md  CONTRIBUTION_GUIDELINES.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  RESEARCH_LOG.md  TODO.md
scripts/: run_demo.py  run_depth_demo.py  run_depth_sampling_demo.py  run_geometry_demo.py  run_grounding_demo.py  run_sam2_demo.py  verify_environment.py
src/vegetation_analysis/: __init__.py
src/vegetation_analysis/api/: __init__.py
src/vegetation_analysis/config/: __init__.py  settings.py
src/vegetation_analysis/core/: __init__.py
src/vegetation_analysis/depth/: __init__.py  constants.py  depth_loader.py  estimator.py  schemas.py  visualization.py
src/vegetation_analysis/depth_sampling/: __init__.py  constants.py  sampler.py  schemas.py  visualization.py
src/vegetation_analysis/geometry/: __init__.py  constants.py  geometry_engine.py  schemas.py  visualization.py
src/vegetation_analysis/grounding/: __init__.py  constants.py  detector.py  grounding_dino_loader.py  (+3 more)
tests/: __init__.py  test_depth_estimator.py  test_depth_loader.py  test_depth_sampler.py  test_depth_sampling_visualization.py  test_depth_visualization.py  test_geometry_engine.py  test_geometry_visualization.py  test_grounding_detector.py  test_grounding_loader.py  test_grounding_prompts_and_visualization.py  test_projection_engine.py  test_sam2_loader.py  test_sam2_segmenter.py  test_sam2_visualization.py  test_segmentation_loader.py  test_segmentation_pipeline.py  test_settings.py
(+17 files in other folders)
