[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vegetation-analysis"
version = "0.1.0"
description = "Computer vision module foundation for electric pole vegetation analysis."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Srinath" }
]
dependencies = [
    "numpy>=1.26,<2.3",
    "opencv-python>=4.9,<5.0",
    "pillow>=10.0,<13.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "torch>=2.0,<3.0",
    "transformers>=4.40,<5.0",

    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

